# evorigg

./: .gitignore  AGENTS.md  PACKAGE_SNAPSHOT.json  README.md  UPLOAD_README.md  pyproject.toml  readme.md
configs/: default.yaml
configs/frozen/: evorig_next_base_init_default.yaml  evorig_next_phase1_final500_supportloss_default.yaml  evorig_next_phase1b_restrefine_default.yaml  evorig_next_phase1c_smooth_default.yaml  evorig_next_phase2_lineage_sibling_fast_default.yaml  evorig_next_phase3_locked_default.yaml
docs/: claude_code_repo_guide_zh.md  claude_experiment_handoff_zh.md  claude_handoff_unirig_import_clean_zh.md  commit_journal_zh.md  current_system_zh.md  current_workline_zh.md  evorig_next_strict_runbook_zh.md  experiment_guardrails_zh.md
docs/claude_ready_handoff_20260512/: ACTIVE_WORKLINE.md  COMMANDS.md  DOUBLE_KNIFE_STATUS.md  ENVIRONMENT_AND_NO_FALLBACK.md  IMPORT_PATHS.md  PACKAGE_MANIFEST.json  README.md  SERVER_UPLOAD.md
scripts/: blender_bake_dynamic_glb_frames.py  check_evorig_environment.py  diagnose_offline_branch_paths.py  import_real_glb_sample.py  import_unirig_dynamic_glb_sample.py  prepare_unirig_window_asset.py  render_skeleton_inspection.py  run_evorig_next_phase1.py  run_evorig_next_phase1abc.py  run_evorig_next_phase2_round1.py  run_evorig_next_phase3_round1.py  view_run_interactive.py
src/evorig_next/: __init__.py  config.py  interactive_viewer.py  phase1_config.py  phase1_field.py  phase1_losses.py  phase1_rotations.py  phase1_skeleton.py  phase1_trainer.py  phase2_topology.py  (+1 more)
tools/: interactive_viewer_workspace.html
(+20 files in other folders)
