[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evorig"
version = "0.1.0"
description = "Research prototype for motion-guided rig graph evolution."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pyyaml>=6.0",
  "torch>=2.4",
  "tqdm>=4.66",
  "trimesh>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

